# model_serving

./: .dockerignore  .env  .env.example  .gitignore  01_model_serving_student.ipynb  Dockerfile  Dockerfile.naive  docker-compose.yml  pyproject.toml  requirements.txt
data/features/: listing_availability_features_v1_student.csv  listing_availability_features_v1_student.parquet  listing_availability_features_v1_student_metadata.json  listing_availability_features_v1_student_validation_report.json  pii_audit_v1_student.csv
k8s/: deployment.yaml  service.yaml
reports/: docker_size_report.md
src/airbnb_serving/: app.py  predictor.py  schema.py
src/airbnb_serving.egg-info/: PKG-INFO
